Update meta and credits, license year, check in misc. forgotten files...

--- a/templates/credits.twig
+++ b/templates/credits.twig
@@ -7,13 +7,13 @@
 <table class="c1 faq">
 	<tr class="h"><td>Credits</td></tr>
 	<tr><td class="n1">
-		<p>Cirrusboard is a minimally lightweight forum software powering {{ config.title }}. It is inspired by the Acmlmboard type of forums, yet bringing modernity to the table with a cleaner codebase while remaining fast and lightweight.</p>
+		<p><a href="https://cirrus.voxelmanip.se">Cirrusboard</a> is a minimal and lightweight forum software powering {{ config.title }}. It is inspired by the Acmlmboard type of forums, yet bringing modernity to the table with a cleaner codebase while remaining fast and lightweight.</p>
 
 		<p>Cirrusboard is licensed under the MIT license, allowing you to make use of it in any way you see fit, given attribution:</p>
 
 		<div class="codeblock" style="width:auto;display:inline-block">Cirrusboard - Minimal forum software written in PHP
 
-Copyright (c) 2022 ROllerozxa
+Copyright (c) 2022-2023 ROllerozxa
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
