Refactor codebase to be router based, remove .php from URLs and more

--- a/templates/_error.twig
+++ b/templates/_error.twig
@@ -6,6 +6,6 @@
 	{% block content %}
 <table class="c1">
 	<tr class="h"><td class="center">Error - {{ err_title }}</td></tr>
-	<tr><td class="n1 center">{{ err_message | raw }}</td></tr>
+	<tr><td class="n1 center"><p>{{ err_message | raw }}</p></td></tr>
 </table>
 	{% endblock %}
