--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -10,7 +10,7 @@
 	</tr>
 	<tr class="h"><td>Management links</td></tr>
 	<tr><td class="n1 center">
-		<p><a href="manageforums.php"><input type="submit" name="action" value="Manage Forums"></a></p>
+		<p><a href="manageforums"><input type="submit" name="action" value="Manage Forums"></a></p>
 	</tr>
 </table>
 
