--- a/templates/components/threadpost_deleted.twig
+++ b/templates/components/threadpost_deleted.twig
@@ -4,7 +4,7 @@
 		(post deleted)
 		<span class="float-right">
 			{% if userdata.rank > 1 %}
-				<a href="editpost.php?pid={{ post.id }}&undelete">Undelete</a> |
+				<a href="editpost?pid={{ post.id }}&undelete">Undelete</a> |
 			{% endif %}
 			ID: {{ post.id }}
 		</span></td>
