--- a/templates/manageforums_forum.twig
+++ b/templates/manageforums_forum.twig
@@ -3,7 +3,7 @@
 {% set title = "Edit forum" %}
 {% set noindex = true %}
 
-{% set breadcrumb = {"manageforums.php": "Forum management"} %}
+{% set breadcrumb = {"manageforums": "Forum management"} %}
 
 	{% block content %}
 <form action="" method="POST">
