--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -6,8 +6,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src: local(''), // Local font if device has it installed. (Linux chads checking in w/ Open Sans installed)
-		url('assets/fonts/open-sans-v34-400.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		url('assets/fonts/open-sans-v34-400.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+		url('fonts/open-sans-v34-400.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+		url('fonts/open-sans-v34-400.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 // open-sans-700 - latin-ext_latin
@@ -17,6 +17,6 @@
 	font-weight: 700;
 	font-display: swap;
 	src: local(''), // Local font if device has it installed. (Linux chads checking in w/ Open Sans installed)
-		url('assets/fonts/open-sans-v34-700.woff2') format('woff2'), // Chrome 26+, Opera 23+, Firefox 39+
-		url('assets/fonts/open-sans-v34-700.woff') format('woff'); // Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+
+		url('fonts/open-sans-v34-700.woff2') format('woff2'), // Chrome 26+, Opera 23+, Firefox 39+
+		url('fonts/open-sans-v34-700.woff') format('woff'); // Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+
 }
