--- a/templates/manageforums.twig
+++ b/templates/manageforums.twig
@@ -9,14 +9,14 @@
 		<tr class="h"><td>Categories</td></tr>
 		{{ catlist | raw }}
 		<tr class="h"><td>&nbsp;</td></tr>
-		<tr><td class="n1"><a href="manageforums.php?cid=new">New category</a></td></tr>
+		<tr><td class="n1"><a href="manageforums?cid=new">New category</a></td></tr>
 	</table>
 
 	<table class="c1">
 		<tr class="h"><td>Forums</td></tr>
 		{{ forumlist | raw }}
 		<tr class="h"><td>&nbsp;</td></tr>
-		<tr><td class="n1"><a href="manageforums.php?fid=new">New forum</a></td></tr>
+		<tr><td class="n1"><a href="manageforums?fid=new">New forum</a></td></tr>
 	</table>
 </div>
 	{% endblock %}
