--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -5,7 +5,7 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: local(''), // Local font if device has it installed. (Linux chads checking in w/ Open Sans installed)
+	src: local(''), // Local font if device has it installed.
 		url('fonts/open-sans-v34-400.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('fonts/open-sans-v34-400.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
@@ -16,7 +16,7 @@
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: local(''), // Local font if device has it installed. (Linux chads checking in w/ Open Sans installed)
+	src: local(''), // Local font if device has it installed.
 		url('fonts/open-sans-v34-700.woff2') format('woff2'), // Chrome 26+, Opera 23+, Firefox 39+
 		url('fonts/open-sans-v34-700.woff') format('woff'); // Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+
 }
